Updated createUserDTO to hold ScenarioId
